--- a/website copy/templates/homepage.html
+++ b/website copy/templates/homepage.html
@@ -87,12 +87,12 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     
-    <title>OLLX!</title>
+    <title>POL-I-SEE!</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">OLLX</a>
+          <a class="navbar-brand" href="/index">POL-I-SEE</a>
           <a class="navbar-brand" href="#"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -110,11 +110,11 @@
                   Product Types
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-divider" href="/bike">Bikes</a></li> 
-                  <li><a class="dropdown-divider" href="/car">Cars</a></li> 
-                  <li><a class="dropdown-divider" href="/electronics">Electronics</a></li>
-                  <li><a class="dropdown-divider" href="/books">Books</a></li>
-                  <li><a class="dropdown-divider" href="/others">Others</a></li>
+                  <li><a class="dropdown-divider" href="/Dangerous">Dangerous</a></li> 
+                  <li><a class="dropdown-divider" href="/safe">Safe</a></li> 
+                  <li><a class="dropdown-divider" href="/safe"></a></li>
+                  <li><a class="dropdown-divider" href="/books"></a></li>
+                  <li><a class="dropdown-divider" href="/others"></a></li>
                 </ul>
               </li>
             </ul>
@@ -136,16 +136,11 @@
        
     </div>
     <div class="row">
-      <div class="col-sm-6">
-        <div class="card" style="width: 23rem;">
-          <img src="static/discount.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">App With their Ratings</h5>
-            <p class="card-text">Ratings </p>
-            <a href="/AskPandSellPdiff1000" class="btn btn-primary">Reveal!!</a>
-          </div>
-        </div>
-      </div>
+
+
+      
+
+
         <div class="col-sm-6">
         <div class="card" style="width: 23rem;">
           <img src="/static/average.png" class="card-img-top" alt="...">
@@ -153,6 +148,18 @@
             <h5 class="card-title">App With their privacy score</h5>
             <p class="card-text">App With their privacy score</p>
             <a href="/AvgPriOBikeIneveryCities" class="btn btn-primary">Safe Apps and Dangerous App</a>
+          </div>
+
+
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="card" style="width: 23rem;">
+          <img src="static/rating.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">App With their Ratings</h5>
+            <p class="card-text">Ratings </p>
+            <a href="/AskPandSellPdiff1000" class="btn btn-primary">Reveal!!</a>
           </div>
         </div>
       </div>
