added code for threat score and indexing

--- a/website copy/templates/result.html
+++ b/website copy/templates/result.html
@@ -31,8 +31,8 @@
             <tr>
                 <th>App Name</th>
                 <th>Summary</th>
+                <th>Threat Score</th>
                 <th>Rating</th>
-                <th>Score</th>
             </tr>
         </thead>
         <tbody>
