--- a/website copy/templates/index.html
+++ b/website copy/templates/index.html
@@ -9,10 +9,19 @@
         .lbl{
             margin: 2px;
             padding: auto;
-            font-family:"Sofia", sans-serif;
+            sans-serif;
             color: #FFA500;
             font-weight: bold;
             text-decoration-line: underline;
+        }
+        .card-title2{
+          margin: 2px;
+            padding: auto;
+            color: #32CD32;
+          sans-serif;
+            border-style: inset;
+            border-color: #00008B;
+            
         }
         .submit{
             margin: 10px 90px;
@@ -26,7 +35,7 @@
           margin: 2px;
           
           color: #00008B;
-          font-family:"Sofia", sans-serif;
+          sans-serif;
           border-style: inset;
           border-color: #32CD32;
           
@@ -57,26 +66,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/homepage">Home</a>
+                <a class="nav-link active" aria-current="page" href="/homepage">HOME</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/search">Items</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Product Types
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-divider" href="/bike">Bikes</a></li>
-                  <li><a class="dropdown-divider" href="/car">Cars</a></li>
-                  <li><a class="dropdown-divider" href="/electronics">ELectronics</a></li>
-                  <li><a class="dropdown-divider" href="/books">Books</a></li>
-                  <li><a class="dropdown-divider" href="/others">Others</a></li>
-                </ul>
+                <a class="nav-link active" aria-current="page" href="/recomendation">RECOMENDATION SYSTEM</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
+                <a class="nav-link active" aria-current="page" href="/bottt">CHAT BOT</a>
               </li>
+              
+  
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -111,9 +110,9 @@
       </h1>
       
     <form class="Form" method="POST" action="" >
-        <label class=" lbl">Name: <input type="text" name="App_Name" /> </label>
+        <label class=" lbl">NAME:<input type="text" name="App_Name" /> </label>
         
-        <label class="submit"><input type="submit"></label>
+        <label class="card-title2"><input type="submit"></label>
     </form>
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -125,5 +124,19 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
+    <div class="Main_footer">
+      <div class="footer">
+          
+          <div class="footer_box">
+              <h2>ABOUT US</h2>
+              <p> About POL-I-SEE Group</p>
+              <p>Careers</p>
+              <p>Contact Us</p>
+              <p>POL-I-SEE People</p>
+          </div>
+      </div>
+    </div>
   </body>
+  
 </html>
+
