recomendation system and  privacy score done, data base updated

--- a/website copy/templates/recScreen.html
+++ b/website copy/templates/recScreen.html
@@ -1,9 +1,50 @@
 <!DOCTYPE html>
+
 <html>
+  
+  <body style="background-color:  #d4fafa ;">
+
   <head>
+    <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">POL-I-SEE</a>
+          <a class="navbar-brand" href="#"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/homepage">Home</a>
+              </li>
+ 
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Product Types
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-divider" href="/Dangerous">Dangerous</a></li> 
+                  <li><a class="dropdown-divider" href="/safe">Safe</a></li> 
+                </ul>
+              </li>
+            </ul>
+
+          </div>
+        </div>
+      </nav>
+      <div class="container p-4">
+        <p class="mt-0" style="font-weight: 500; font-size: 20px; text-align:top;">Better, safer apps recommended!</p>
+        <h1 class="mb-0" style="color:#91612F; font-weight: bolder; font-size: 50px; text-align:left; ">
+            <span>                
+        
+        
+       
+    </div>
+    <div class="row">
     <title>Result Page</title>
   </head>
   <body>
-    <p>You entered: {{ input }}</p>
+    <p class> {{ input }}</p>
   </body>
 </html>
