--- a/website copy/templates/home.html
+++ b/website copy/templates/home.html
@@ -2,24 +2,85 @@
 <html>
 <head>
 	<title>Chatbot</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
 </head>
 <body>
-	<h1>Chatbot</h1>
-	<div id="chatbox">
-		<p class="bot-message">Hello, I'm a chatbot. How can I help you?</p>
+	<body>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<div class="container-fluid">
+			  <a class="navbar-brand" href="/">POL-I-SEE</a>
+			  <a class="navbar-brand" href="#"></a>
+			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			  </button>
+			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				  <li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="#">Home</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="#"></a>
+				  </li>
+				  <li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+					  Product Types
+					</a>
+					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+					  <li><a class="dropdown-divider" href="/Dangerous">Dangerous</a></li> 
+					  <li><a class="dropdown-divider" href="/safe">Safe</a></li> 
+					  <li><a class="dropdown-divider" href="/safe"></a></li>
+					  <li><a class="dropdown-divider" href="/books"></a></li>
+					  <li><a class="dropdown-divider" href="/others"></a></li>
+					</ul>
+				  </li>
+				</ul>
+				<form class="d-flex">
+				  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+				  <button class="btn btn-outline-success" type="submit">Search</button>
+				</form>
+			  </div>
+			</div>
+		  </nav>
+		  <div class="container p-4">
+			<p class="mt-0" style="font-weight: 500; font-size: 20px; text-align:top;">Know your App's Privacy!!</p>
+			<h1 class="mb-0" style="color:#91612F; font-weight: bolder; font-size: 50px; text-align:left; ">
+				<span>                
+					<img src="{{url_for('static', filename='polisee.png')}}" width="100%" style="display: inline-block;">
+			
+			
+		   
+		</div>
+		<div class="row">
+	<body style="background-color:  #d4fafa ;">
+
+	<div class="container mt-5">
+		<h1>Chatbot</h1>
+		<div class="card mb-3">
+			<div class="card-body" id="chatbox">
+				<div class="row">
+					<div class="col-12">
+						<p class="bot-message">Hello, I'm a chatbot. How can I help you?</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="input-group mb-3">
+			<input type="text" class="form-control" placeholder="Type your message here" id="user-input">
+			<div class="input-group-append">
+				<button class="btn btn-primary" type="button" onclick="sendMessage()">Send</button>
+			</div>
+		</div>
 	</div>
-	<input type="text" id="user-input">
-	<button onclick="sendMessage()">Send</button>
 	<script>
 		function sendMessage() {
 			var userInput = document.getElementById("user-input").value;
 			var chatbox = document.getElementById("chatbox");
-			var userMessage = "<p class='user-message'>" + userInput + "</p>";
+			var userMessage = '<div class="row"><div class="col-6"><p class="user-question">' + userInput + '</p></div></div>';
 			chatbox.innerHTML += userMessage;
 			var xhr = new XMLHttpRequest();
 			xhr.open("GET", "/get?msg=" + userInput, true);
 			xhr.onload = function() {
-				var botMessage = "<p class='bot-message'>" + xhr.responseText + "</p>";
+				var botMessage = '<div class="row"><div class="col-6 offset-6"><p class="bot-answer">' + xhr.responseText + '</p></div></div>';
 				chatbox.innerHTML += botMessage;
 			}
 			xhr.send();
@@ -27,29 +88,25 @@
 		}
 	</script>
 	<style>
-		.user-message {
-			background-color: #ccc;
+		.user-question {
+			background-color: #f8f9fa;
 			padding: 10px;
 			border-radius: 10px;
 			display: inline-block;
-			max-width: 70%;
 			margin-right: 10px;
 			margin-bottom: 10px;
 			word-wrap: break-word;
 		}
-		.bot-message {
-			background-color: #0d6efd;
+		.bot-answer {
+			background-color: #007bff;
 			color: #fff;
 			padding: 10px;
 			border-radius: 10px;
 			display: inline-block;
-			max-width: 70%;
-			margin-right: 10px;
+			margin-left: 10px;
 			margin-bottom: 10px;
 			word-wrap: break-word;
-		}
-		#chatbox {
-			margin-bottom: 20px;
+			text-align: right;
 		}
 	</style>
 </body>
