--- a/website copy/templates/homepage.html
+++ b/website copy/templates/homepage.html
@@ -1,5 +1,7 @@
 <!doctype html>
 <html lang="en">
+  <body style="background-color:   #d4fafa ;">
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <style>
         
@@ -7,14 +9,20 @@
             background-color: white;
             color: rgb(1, 4, 4);
         }
+        .lbl{
+          margin: 2px;
+          padding: auto;
+          sans-serif;
+          color:  #0052cc;            ;
+          font-weight: bold;
+      }
         .card-text{
           margin: 2px;
           padding: auto;
           color: #00008B;
-          font-family:"Sofia", sans-serif;
+          font-family:sans-serif;
           color: #FFA500;
           font-size: 18px;
-          text-decoration-line: underline;
 
           
       }
@@ -33,10 +41,9 @@
       .card-title{
         margin: 2px;
           padding: auto;
-          color: #32CD32;
-          font-family:"Sofia", sans-serif;
+          color: #041880;
+          font-family:sans-serif;
           font-size: 34px;
-          border-style: inset;
           border-color: #00008B;
           
       }
@@ -92,7 +99,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">POL-I-SEE</a>
+          <a class="navbar-brand" href="/">POL-I-SEE</a>
           <a class="navbar-brand" href="#"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -131,7 +138,6 @@
             <span>                
                 <img src="{{url_for('static', filename='polisee.png')}}" width="100%" style="display: inline-block;">
         
-        <p class="card-title" style="font-weight: 500; font-size: 20px; text-align:top;">Know your App's Privacy!!</p>
         
        
     </div>
