--- a/website copy/templates/index.html
+++ b/website copy/templates/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+
 <html lang="en">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <style>
@@ -6,13 +7,19 @@
             margin: 100px;
 
         }
+        .img-middle-right {
+          position: absolute;
+          top: 50%;
+          right: 0;
+          transform: translate(0, -50%);
+        }
+    
         .lbl{
             margin: 2px;
             padding: auto;
             sans-serif;
-            color: #FFA500;
+            color:  #0052cc;            ;
             font-weight: bold;
-            text-decoration-line: underline;
         }
         .card-title2{
           margin: 2px;
@@ -30,6 +37,10 @@
             background-color: aquamarine;
             color: rgb(29, 4, 4);
         }
+        .img-right {
+          float: right;
+          margin-left: 10px; /* Add some margin to the left for spacing */
+        }
         
         .smallerFont {
           margin: 2px;
@@ -46,7 +57,9 @@
         }
 
     </style>
-  <head>
+  <head>  
+
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -56,7 +69,9 @@
 
     <title>POL-I-SEE!</title>
   </head>
-  <body>
+  <body style="background-color:  #66ffff ;">
+
+    
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">POL-I-SEE</a>
@@ -88,32 +103,28 @@
               <div class="container p-4">
     
                   <h1 class="mb-0" style="color:#72502b; font-weight: bolder; font-size: 50px; text-align:right; ">
-                      <span>                
-                  
-                  <p class="smallerFont" style="font-weight: 500; font-size: 20px; text-align:right;">Know your policy!!</p>
-                  
-    
+                      <span>                              
               </div>
     
-          </div>
-          <div class="col-md-7 pl-4 pr-0 mr-0 col-12 m-0 p-0 d-none d-md-block image-login">
-              <img class="pt-3 pt-md-5 mt-md-5 mt-lg-0" src="{{url_for('static', filename='polisee.png')}}" width="70%" style="display: block;
-              margin-left: auto;
-              margin-right: auto;">
           </div>
       </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
       </nav>
       <h1>
-        <span class="smallerFont">Enter the name of app for which you want to know their privacy policy </span>
+        
+        <span class="lbl">Want privacy policy summary? Enter app name </span>
         
       </h1>
-      
+<div class="flex-container" style="display: flex;">
     <form class="Form" method="POST" action="" >
         <label class=" lbl">NAME:<input type="text" name="App_Name" /> </label>
         
         <label class="card-title2"><input type="submit"></label>
     </form>
+    <div class="">
+      <img class="" src="{{url_for('static', filename='polisee.png')}}" width="70%" style="">
+  </div>
+</div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -137,6 +148,7 @@
       </div>
     </div>
   </body>
+</body>
   
 </html>
 
