--- a/website copy/templates/login.html
+++ b/website copy/templates/login.html
@@ -1,5 +1,7 @@
 <!doctype html>
 <html lang="en">
+  <body style="background-color:  #66ffff ;">
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <style>
         
