--- a/website copy/templates/recomendation.html
+++ b/website copy/templates/recomendation.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <style>
+
             .Form{
                 margin: 100px;
     
@@ -12,7 +13,7 @@
                 sans-serif;
                 color: #87CEEB;
                 font-weight: bold;
-                text-decoration-line: underline;
+                text-decoration-line;
             }
             .submit:hover{
                 background-color: aquamarine;
@@ -116,11 +117,20 @@
           width: 1200px;
           margin: auto;
       }
+      .lbl{
+        margin: 2px;
+        padding: auto;
+        sans-serif;
+        color:  #0052cc;            ;
+        font-weight: bold;
+    }
       
 
     </style>
   <head>
     <!-- Required meta tags -->
+    <body style="background-color:  #66ffff ;">
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -169,15 +179,23 @@
         <h1 class="mb-0" style="color:#91612F; font-weight: bolder; font-size: 50px; text-align:left; ">
             <span>                
               
-        <p class="card-title" style="font-weight: 500; font-size: 20px; text-align:top;">Enter the app name for which you want to know recomended app!!</p>
+        <p class="lbl" style="font-weight: 500; font-size: 20px; text-align:top;">Enter the app name for which you want to know recomended app!!</p>
     </div>
 
 
 
 <body>
-    <form class="Form" method="POST" action="recomendationInput" >
-        <label class="lbl">APP NAME<input type="text" name="input_text1" /> </label>
-        <label class="card-title2"><input type="Submit"></label>
+  <div class="flex-container" style="display: flex;">
+    <form class="Form" method="POST" action="/recomendationInput" >
+      <label for="input_text1">App_Name:</label>
+      <input type="text" id="input_text1" name="input_text1"><br>
+        
+        <label class="card-title2"><input type="submit"></label>
     </form>
+    <div class="">
+      <img class="" src="{{url_for('static', filename='polisee.png')}}" width="70%" style="">
+  </div>
+</div>
+
 </body>
 </html>
