--- a/website copy/templates/notFound.html
+++ b/website copy/templates/notFound.html
@@ -56,6 +56,7 @@
 
 
 <body>
+	<body style="background-color:   #d4fafa ;">
 
 	<p>App is not in our database. Submit privacy policy to get Summary, Score, and Rating</p>
 	<form method="POST" action="/process_input">
