--- a/website copy/templates/dangerous.html
+++ b/website copy/templates/dangerous.html
@@ -31,7 +31,7 @@
       <tr>
         <th scope="col">App Id</th>
         <th scope="col">App Name </th>
-        <th scope="col">Threat Score</th>
+        <th scope="col">Threat Score(more threat score means more dangerous)</th>
         
       </tr>
     </thead>
