--- a/website copy/templates/home.html
+++ b/website copy/templates/home.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<body style="background-color:   #d4fafa ;">
+
 	<title>Chatbot</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
 </head>
