--- a/website copy/templates/notFound.html
+++ b/website copy/templates/notFound.html
@@ -58,7 +58,7 @@
 <body>
 	<body style="background-color:   #d4fafa ;">
 
-	<p>App is not in our database. Submit privacy policy to get Summary, Score, and Rating</p>
+	<p>App is not in our database. Submit app name to get Summary, Score, and Rating</p>
 	<form method="POST" action="/process_input">
 		<label for="input_text1">App Name:</label>
 		<input type="text" id="input_text1" name="input_text1"><br>
